Task instance Java/5